@@ -18,6 +18,9 @@ Zope Changes
 
     Bugs Fixed
 
+      - Usage of 'urljoin' in 'webdav.davcmds' could lead to wrongly
+        constructed urls.
+
       - Fix #2141: TALES doesn't traverse correctly over 'repeat'
         variable
 
